--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,5 +1,4 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Theme.MePlayer" parent="Theme.MaterialComponents.DayNight.NoActionBar">
-    </style>
+    <style name="Theme.MePlayer" parent="Theme.MaterialComponents.DayNight.NoActionBar"/>
 </resources>
